Summarizer & score calculator

--- a/summarizer.ipynb
+++ b/summarizer.ipynb
@@ -2939,6 +2939,7 @@
         "\n",
         "text = \"We require your consent for data sharing with third parties for advertisement purposes. data sharing, data share\"\n",
         "\n",
+        "\n",
         "data_sharing = 0\n",
         "third_party = 0\n",
         "advertise = 0\n",
@@ -2961,6 +2962,7 @@
         "print(f\"Found {len(matches)} matches for [advertisements]: {matches}\")\n",
         "advertise = len(matches)\n",
         "\n",
+        "score = (third_party*5 + data_sharing*3 + advertise*2)/(third_party + data_sharing + advertise)\n",
         "\n"
       ],
       "metadata": {
